--- a/2-)destiny/styles/responsive.css
+++ b/2-)destiny/styles/responsive.css
@@ -4,9 +4,9 @@
     gap: 100px !important;
   }
   .actions-section .info {
-    max-width: unset;
-    background-color: red;
-    /* todo: max-width sorunu çözülecek  */
+    max-width: unset !important;
+    text-align: center;
+    padding: 10px;
   }
 }
 @media (max-width: 1300px) {
@@ -18,9 +18,20 @@
   #services .service-info {
     max-width: unset;
   }
+  .welcome-section .welcome-title {
+    padding: 20px !important;
+    text-align: center;
+  }
 }
-
+@media (max-width: 1100px) {
+  .projects-section .project-cards .project-card {
+    flex-direction: column-reverse;
+  }
+}
 @media (max-width: 1000px) {
+  section {
+    padding: 15px;
+  }
   /* Header */
   header #menu-btn {
     display: block !important;
@@ -59,6 +70,32 @@
     gap: 30px;
     padding: 20px 0;
   }
+
+  /* * Count Section  */
+  .count-section {
+    flex-direction: column;
+    text-align: center;
+  }
+  .count-section :where(.count-section-left, .count-section-right) {
+    width: 100%;
+  }
+  .count-section .count-section-left .count-wrapper {
+    max-width: 600px !important;
+    min-width: 400px;
+    margin: auto;
+  }
+  .count-section .count-section-right img {
+    max-width: 500px !important;
+    width: 80%;
+  }
+
+  /* * Donate Section  */
+  .donations-section .donate-section-info {
+    width: 90% !important;
+  }
+  .donations-section .donate-cards {
+    width: 90% !important;
+  }
 }
 
 @media (max-width: 800px) {
@@ -69,17 +106,15 @@
   #services .windows .window {
     width: 600px;
   }
-}
-
-@media (max-width: 600px) {
-  #services .windows .window {
-    width: 400px;
-  }
-}
-
-@media (max-width: 680px) {
-  #arge-section .arge-cards .arge-card video {
+  .projects-section .project-cards .project-card .card-image {
     width: 100%;
+  }
+  .projects-section .project-cards .project-card .card-image img {
+    width: 100%;
+  }
+
+  .projects-section .project-cards .project-card .project-info h1 {
+    font-size: 30px !important;
   }
 }
 @media (max-width: 640px) {
@@ -87,6 +122,15 @@
     flex-direction: column;
   }
   footer .footer-links .footer-link form :where(input, button) {
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  #services .windows .window {
+    width: 400px;
+  }
+  #arge-section .arge-cards .arge-card video {
     width: 100%;
   }
 }
