--- a/3-)airbnb-clone/styles/base/_variable.scss
+++ b/3-)airbnb-clone/styles/base/_variable.scss
@@ -22,3 +22,5 @@ $space-xl: 4rem;
 
 $shadow-sm: 0 2px 6px rgba(0, 0, 0, 0.05);
 $shadow-lg: 0 0 10px rgba(0, 0, 0, 0.425);
+
+$transition: all 0.4s ease-in-out;
